--- a/Forum/WebContent/resources/css/main.css
+++ b/Forum/WebContent/resources/css/main.css
@@ -7,7 +7,6 @@ body, h1, h2, h3, h4, h5, h6, p, ul, dl, ol, form, fieldset, input, label, table
 	padding: 0;
 	border: 0;
 	margin: 0;
-	font-size: 12px;
 }
 
 header {
@@ -20,6 +19,10 @@ header {
 	padding-bottom: 20px;
 
 	
+}
+
+header p {
+	color: #F8F8F8;
 }
 
 footer {
@@ -37,8 +40,10 @@ footer {
 	color: #414142;
 	font-size: 60px;
 	background-color: #F8F8F8;
-	margin-right: auto;
-	margin-left: auto;
 	width: 200px;
 	position: relative;
+}
+
+#test {
+	color: red;
 }
