--- a/Forum/WebContent/WEB-INF/layouts/default.xml
+++ b/Forum/WebContent/WEB-INF/layouts/default.xml
@@ -10,6 +10,13 @@
 		<put-attribute name="footer" value="/WEB-INF/tiles/footer.jsp"></put-attribute>
 	</definition>
 
+	<definition name="newaccount" template="/WEB-INF/templates/default.jsp">
+		<put-attribute name="title" value="Forum: Your economics blog feed"></put-attribute>
+		<put-attribute name="header" value="/WEB-INF/tiles/header.jsp"></put-attribute>
+		<put-attribute name="content" value="/WEB-INF/tiles/newaccount.jsp"></put-attribute>
+		<put-attribute name="footer" value="/WEB-INF/tiles/footer.jsp"></put-attribute>
+	</definition>
+
 	<definition name="fetchrss" template="/WEB-INF/templates/default.jsp">
 		<put-attribute name="title" value="Forum: Your economics blog feed"></put-attribute>
 		<put-attribute name="header" value="/WEB-INF/tiles/header.jsp"></put-attribute>
@@ -23,14 +30,14 @@
 		<put-attribute name="content" value="/WEB-INF/tiles/rssfetched.jsp"></put-attribute>
 		<put-attribute name="footer" value="/WEB-INF/tiles/footer.jsp"></put-attribute>
 	</definition>
-	
-		<definition name="login" template="/WEB-INF/templates/default.jsp">
+
+	<definition name="login" template="/WEB-INF/templates/default.jsp">
 		<put-attribute name="title" value="Forum: Your economics blog feed"></put-attribute>
 		<put-attribute name="header" value="/WEB-INF/tiles/header.jsp"></put-attribute>
 		<put-attribute name="content" value="/WEB-INF/tiles/login.jsp"></put-attribute>
 		<put-attribute name="footer" value="/WEB-INF/tiles/footer.jsp"></put-attribute>
 	</definition>
-	
+
 
 
 </tiles-definitions>
